# topic_modelling_negative_reviews

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/model01/: config.json  ctfidf_config.json  topics.json
notebooks/exploratory/: 0.01-dbc-fit-model copy.ipynb  0.01-dbc-fit-model.ipynb  first_circle_sagemaker_deploy.ipynb
topic_modelling_negative_reviews/: __init__.py  dataset.py  features.py  plots.py  variable_hyperparam.json
topic_modelling_negative_reviews/api/: Dockerfile  api.py
topic_modelling_negative_reviews/lambda_function/: Dockerfile  lambda_function.py  requirements.txt
topic_modelling_negative_reviews/model_deploy/: Dockerfile  inference.py  predict.py  variable_hyperparam.json
topic_modelling_negative_reviews/model_deploy/all-MiniLM-L6-v2/: config_sentence_transformers.json
topic_modelling_negative_reviews/model_fit/: Dockerfile  bert-topic.py  train.py
topic_modelling_negative_reviews/modeling/: predict.py  train.py
topic_modelling_negative_reviews/preprocessing_data/: preprocessing.py  preprocessing_data.py  pyproject.toml
