[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "topic_modelling_negative_reviews"
version = "0.0.1"
description = "This project aims to summarize all negative reviews of a product and classify them in one of the topics in a few words to detect which are the main customer complaints about it. The model is deployed in AWS and stakeholders can access these words by entering the product ID in a gradio web API."
authors = [
  { name = "Danillo Cordeiro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["topic_modelling_negative_reviews"]
force_sort_within_sections = true
